--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-__pycache__
+# Компилированные файлы Python
+__pycache__/
+*.pyc
+
+# Логи
+*.log
+
+# Файлы IDE
+.vscode/
+.idea/
+
+# Файлы операционной системы
+Thumbs.db
+.DS_Store
